2008-03-03  Peter Kjellerstedt  <pkj@axis.com>

	* configure.ac:
	Use AG_GST_CHECK_PLUGIN and AG_GST_DISABLE_PLUGIN to simplify which
	plug-ins are included/excluded. (#498222)

2008-03-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Add typefinder for IMelody files, using audio/x-imelody.
	See bug #519516.

2008-03-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/alsa/gstalsamixertrack.c: (gst_alsa_mixer_track_get_type):
	* ext/alsa/gstalsasink.c: (set_hwparams):
	* ext/alsa/gstalsasrc.c: (set_hwparams):
	* ext/gio/gstgio.c: (gst_gio_uri_handler_get_uri):
	* ext/ogg/gstoggmux.h:
	* ext/ogg/gstogmparse.c:
	* gst-libs/gst/audio/audio.c:
	* gst-libs/gst/fft/kiss_fft_f64.c: (kiss_fft_f64_alloc):
	* gst-libs/gst/pbutils/missing-plugins.c:
	(gst_missing_uri_sink_message_new),
	(gst_missing_element_message_new),
	(gst_missing_decoder_message_new),
	(gst_missing_encoder_message_new):
	* gst-libs/gst/rtp/gstbasertppayload.c:
	* gst-libs/gst/rtp/gstrtcpbuffer.c:
	(gst_rtcp_packet_bye_get_reason):
	* gst/audioconvert/gstaudioconvert.c:
	* gst/audioresample/gstaudioresample.c:
	* gst/ffmpegcolorspace/imgconvert.c:
	* gst/playback/test.c: (gen_video_element), (gen_audio_element):
	* gst/typefind/gsttypefindfunctions.c:
	* gst/videoscale/vs_4tap.c:
	* gst/videoscale/vs_4tap.h:
	* sys/v4l/gstv4lelement.c:
	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_get_any_caps):
	* sys/v4l/v4l_calls.c:
	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_capture_init),
	(gst_v4lsrc_try_capture):
	* sys/ximage/ximagesink.c: (gst_ximagesink_check_xshm_calls),
	(gst_ximagesink_ximage_new):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_check_xshm_calls),
	(gst_xvimagesink_xvimage_new):
	* tests/check/elements/audioconvert.c:
	* tests/check/elements/audioresample.c:
	(fail_unless_perfect_stream):
	* tests/check/elements/audiotestsrc.c: (setup_audiotestsrc):
	* tests/check/elements/decodebin.c:
	* tests/check/elements/gdpdepay.c: (setup_gdpdepay),