@@ -1,3 +1,12 @@
+2008-03-03  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst-libs/gst/interfaces/mixeroptions.c: (gst_mixer_options_init),
+	  (gst_mixer_options_get_values):
+	* gst-libs/gst/interfaces/mixeroptions.h:
+	  (GST_MIXER_OPTIONS_GET_CLASS), (GstMixerOptionsClass),
+	  (_GstMixerOptions), (_GstMixerOptionsClass):
+	  API: add GstMixerOptions::get_values vfunc (#519906)
+
 2008-03-03  Peter Kjellerstedt  <pkj@axis.com>
 
 	* configure.ac:
